[CELEBORN-9] [ISSUE-861] Support multiple JDK version build (#974)